cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09552_333210840.yaml
Resources:
  vpcci72CCBF6E:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/Resource
  vpcciPublicSubnet1Subnet449E045E:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: vpcci72CCBF6E
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1/Subnet
  vpcciPublicSubnet1RouteTableFBF6E1D2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcci72CCBF6E
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1/RouteTable
  vpcciPublicSubnet1RouteTableAssociation08DD9653:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcciPublicSubnet1RouteTableFBF6E1D2
      SubnetId:
        Ref: vpcciPublicSubnet1Subnet449E045E
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1/RouteTableAssociation
  vpcciPublicSubnet1DefaultRoute401E5728:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vpcciPublicSubnet1RouteTableFBF6E1D2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: vpcciIGW6D89C234
    DependsOn:
      - vpcciVPCGWAE227CD4
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1/DefaultRoute
  vpcciPublicSubnet1EIP3F126B5C:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1/EIP
  vpcciPublicSubnet1NATGateway88FA72E9:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - vpcciPublicSubnet1EIP3F126B5C
          - AllocationId
      SubnetId:
        Ref: vpcciPublicSubnet1Subnet449E045E
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet1/NATGateway
  vpcciPublicSubnet2Subnet4AE11167:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: vpcci72CCBF6E
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2/Subnet
  vpcciPublicSubnet2RouteTable81979E8F:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcci72CCBF6E
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2/RouteTable
  vpcciPublicSubnet2RouteTableAssociationCD94F01C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcciPublicSubnet2RouteTable81979E8F
      SubnetId:
        Ref: vpcciPublicSubnet2Subnet4AE11167
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2/RouteTableAssociation
  vpcciPublicSubnet2DefaultRoute9BC6D417:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vpcciPublicSubnet2RouteTable81979E8F
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: vpcciIGW6D89C234
    DependsOn:
      - vpcciVPCGWAE227CD4
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2/DefaultRoute
  vpcciPublicSubnet2EIPD6F47B3A:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2/EIP
  vpcciPublicSubnet2NATGateway4D58638E:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - vpcciPublicSubnet2EIPD6F47B3A
          - AllocationId
      SubnetId:
        Ref: vpcciPublicSubnet2Subnet4AE11167
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PublicSubnet2/NATGateway
  vpcciPrivateSubnet1SubnetA6981738:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: vpcci72CCBF6E
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet1
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet1/Subnet
  vpcciPrivateSubnet1RouteTableD88AA6E6:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcci72CCBF6E
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet1
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet1/RouteTable
  vpcciPrivateSubnet1RouteTableAssociation5EE97B37:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcciPrivateSubnet1RouteTableD88AA6E6
      SubnetId:
        Ref: vpcciPrivateSubnet1SubnetA6981738
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet1/RouteTableAssociation
  vpcciPrivateSubnet1DefaultRoute2F8540DD:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vpcciPrivateSubnet1RouteTableD88AA6E6
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: vpcciPublicSubnet1NATGateway88FA72E9
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet1/DefaultRoute
  vpcciPrivateSubnet2SubnetA667799D:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: vpcci72CCBF6E
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet2
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet2/Subnet
  vpcciPrivateSubnet2RouteTable8AB2755C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vpcci72CCBF6E
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet2
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet2/RouteTable
  vpcciPrivateSubnet2RouteTableAssociation9830C077:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: vpcciPrivateSubnet2RouteTable8AB2755C
      SubnetId:
        Ref: vpcciPrivateSubnet2SubnetA667799D
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet2/RouteTableAssociation
  vpcciPrivateSubnet2DefaultRouteB796581E:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: vpcciPrivateSubnet2RouteTable8AB2755C
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: vpcciPublicSubnet2NATGateway4D58638E
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/PrivateSubnet2/DefaultRoute
  vpcciIGW6D89C234:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CdkGithubActionsSelfHostedStack/vpc-ci
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/IGW
  vpcciVPCGWAE227CD4:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: vpcci72CCBF6E
      InternetGatewayId:
        Ref: vpcciIGW6D89C234
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/vpc-ci/VPCGW
  githubRunnersCluster6BBD1585:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: github-self-hosted-runners
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/Cluster/Resource
  githubRunnersgithubrunnerTaskRole5B5F23EA:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/githubrunner/TaskRole/Resource
  githubRunnersgithubrunner08DA10A0:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: ORG_NAME
              Value: ""
            - Name: ORG_RUNNER
              Value: "true"
            - Name: LABELS
              Value: fargate
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:5c77284f411d75211371ffb6e51d09f7290d8ee0bd7856e41a32b85dff32df54
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: githubRunnersgithubrunnergithubrunnercontainerLogGroupBA9B4B0A
              awslogs-stream-prefix: github-ContainerLogs
              awslogs-region:
                Ref: AWS::Region
          Name: githubrunnercontainer
          Secrets:
            - Name: ACCESS_TOKEN
              ValueFrom:
                Fn::Join:
                  - ""
                  - - "arn:"
                    - Ref: AWS::Partition
                    - ":secretsmanager:"
                    - Ref: AWS::Region
                    - ":"
                    - Ref: AWS::AccountId
                    - :secret:github/actions/runnerToken
      Cpu: "2048"
      ExecutionRoleArn:
        Fn::GetAtt:
          - githubRunnersgithubrunnerExecutionRole609EE0A9
          - Arn
      Family: githubrunner
      Memory: "4096"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - githubRunnersgithubrunnerTaskRole5B5F23EA
          - Arn
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/githubrunner/Resource
  githubRunnersgithubrunnergithubrunnercontainerLogGroupBA9B4B0A:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 1
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/githubrunner/githubrunnercontainer/LogGroup/Resource
  githubRunnersgithubrunnerExecutionRole609EE0A9:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/githubrunner/ExecutionRole/Resource
  githubRunnersgithubrunnerExecutionRoleDefaultPolicy7014DD14:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/aws-cdk/assets
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - githubRunnersgithubrunnergithubrunnercontainerLogGroupBA9B4B0A
                - Arn
          - Action:
              - secretsmanager:GetSecretValue
              - secretsmanager:DescribeSecret
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":secretsmanager:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :secret:github/actions/runnerToken-??????
        Version: "2012-10-17"
      PolicyName: githubRunnersgithubrunnerExecutionRoleDefaultPolicy7014DD14
      Roles:
        - Ref: githubRunnersgithubrunnerExecutionRole609EE0A9
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/githubrunner/ExecutionRole/DefaultPolicy/Resource
  githubRunnersgithubserviceServiceF96EB57F:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: githubRunnersCluster6BBD1585
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - githubRunnersgithubserviceSecurityGroup9396CB81
                - GroupId
          Subnets:
            - Ref: vpcciPrivateSubnet1SubnetA6981738
            - Ref: vpcciPrivateSubnet2SubnetA667799D
      ServiceName: github-runner-service
      TaskDefinition:
        Ref: githubRunnersgithubrunner08DA10A0
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/githubservice/Service
  githubRunnersgithubserviceSecurityGroup9396CB81:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: CdkGithubActionsSelfHostedStack/githubRunners/githubservice/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: vpcci72CCBF6E
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/githubRunners/githubservice/SecurityGroup/Resource
  ScaleRunnerLambdaServiceRoleA2A4CC0C:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/ScaleRunnerLambda/ServiceRole/Resource
  ScaleRunnerLambdaServiceRoleDefaultPolicy2F3C8010:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - secretsmanager:GetSecretValue
              - secretsmanager:DescribeSecret
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":secretsmanager:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :secret:github/actions/runnerToken-??????
          - Action:
              - ecs:DescribeServices
              - ecs:UpdateService
            Effect: Allow
            Resource:
              Ref: githubRunnersgithubserviceServiceF96EB57F
        Version: "2012-10-17"
      PolicyName: ScaleRunnerLambdaServiceRoleDefaultPolicy2F3C8010
      Roles:
        - Ref: ScaleRunnerLambdaServiceRoleA2A4CC0C
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/ScaleRunnerLambda/ServiceRole/DefaultPolicy/Resource
  ScaleRunnerLambda8B9BBE69:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Ref: AssetParameters5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610S3Bucket559E5E04
        S3Key:
          Fn::Join:
            - ""
            - - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610S3VersionKey28E6DA30
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610S3VersionKey28E6DA30
      Handler: scaleRunners.handler
      Role:
        Fn::GetAtt:
          - ScaleRunnerLambdaServiceRoleA2A4CC0C
          - Arn
      Runtime: nodejs12.x
      Environment:
        Variables:
          GITHUB_API_TOKEN: github/actions/runnerToken
          GITHUB_OWNER: ""
          GITHUB_REPO: ""
          FARGATE_SELF_HOSTED_RUNNER_SERVICE:
            Fn::GetAtt:
              - githubRunnersgithubserviceServiceF96EB57F
              - Name
          FARGATE_SELF_HOSTED_RUNNER_CLUSTER:
            Ref: githubRunnersCluster6BBD1585
    DependsOn:
      - ScaleRunnerLambdaServiceRoleDefaultPolicy2F3C8010
      - ScaleRunnerLambdaServiceRoleA2A4CC0C
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/ScaleRunnerLambda/Resource
      aws:asset:path: asset.5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610
      aws:asset:property: Code
  ScaleRunnerLambdaAllowEventRuleCdkGithubActionsSelfHostedStackScheduleRuleF8C972BB82794F43:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - ScaleRunnerLambda8B9BBE69
          - Arn
      Principal: events.amazonaws.com
      SourceArn:
        Fn::GetAtt:
          - ScheduleRuleDA5BD877
          - Arn
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/ScaleRunnerLambda/AllowEventRuleCdkGithubActionsSelfHostedStackScheduleRuleF8C972BB
  ScheduleRuleDA5BD877:
    Type: AWS::Events::Rule
    Properties:
      ScheduleExpression: cron(* * * * ? *)
      State: ENABLED
      Targets:
        - Arn:
            Fn::GetAtt:
              - ScaleRunnerLambda8B9BBE69
              - Arn
          Id: Target0
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/ScheduleRule/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.80.0,@aws-cdk/aws-applicationautoscaling=1.80.0,@aws-cdk/aws-autoscaling=1.80.0,@aws-cdk/aws-autoscaling-common=1.80.0,@aws-cdk/aws-autoscaling-hooktargets=1.80.0,@aws-cdk/aws-cloudwatch=1.80.0,@aws-cdk/aws-codeguruprofiler=1.80.0,@aws-cdk/aws-ec2=1.80.0,@aws-cdk/aws-ecr=1.80.0,@aws-cdk/aws-ecr-assets=1.80.0,@aws-cdk/aws-ecs=1.80.0,@aws-cdk/aws-elasticloadbalancingv2=1.80.0,@aws-cdk/aws-events=1.80.0,@aws-cdk/aws-events-targets=1.80.0,@aws-cdk/aws [...]
    Metadata:
      aws:cdk:path: CdkGithubActionsSelfHostedStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  AssetParameters5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610S3Bucket559E5E04:
    Type: String
    Description: S3 bucket for asset "5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610"
  AssetParameters5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610S3VersionKey28E6DA30:
    Type: String
    Description: S3 key for asset version "5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610"
  AssetParameters5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610ArtifactHashCC985342:
    Type: String
    Description: Artifact hash for asset "5065965fb479c9b7e901b7eafc4b13a740ee8567748328cca39822b12ea02610"
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
